Fixed some alignment

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -261,3 +261,11 @@ footer {
 .gray{
     color: #333;
 }
+
+#top{
+    padding-bottom: 10%;
+}
+
+.white{
+    color: white;
+}
